--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #000000;
+  background-color: #fff;
   height: 100px;
   display: flex;
   justify-content: center;
@@ -32,7 +32,7 @@
 
 .nav-logo {
   text-decoration: none;
-  color: #00b5e2;
+  color: #000;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
