--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,5 +1,69 @@
-.login-image {
-  height: 100%;
-  width: 40%;
-  align-items: left;
+.login {
+	height: calc(100vh - 50px);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.loginTitle {
+	font-size: 50px;
+}
+
+.loginForm {
+	margin-top: 20px;
+	width: 400px;
+	display: flex;
+	flex-direction: column;
+}
+
+.loginForm > label {
+	margin: 10px 0;
+}
+
+.loginInput {
+	padding: 10px;
+	background-color: #f4f4f4;
+	border: none;
+	border-radius: 10px;
+}
+
+.loginInput:focus {
+	outline: none;
+}
+
+.loginButton {
+	margin-top: 20px;
+	cursor: pointer;
+	background-color: black;
+	color: white;
+	padding: 10px;
+	border: none;
+	border-radius: 10px;
+	text-align: center;
+}
+.loginButton:disabled {
+	cursor: not-allowed;
+	background-color: slategrey;
+
+}
+.loginRegisterButton {
+	position: absolute;
+	top: 60px;
+	right: 20px;
+	background-color: black;
+	cursor: pointer;
+	padding: 10px;
+	border: none;
+	color: white;
+	border-radius: 10px;
+	text-decoration: none;
+}
+
+.another {
+	margin: auto;
+	display: flex;
+	flex-direction: inherit;
+	justify-content: center;
+	text-align: center;
 }
