--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #fff;
-  height: 100px;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,12 +15,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 80px;
+  height: 58px;
   max-width: 1500px;
 }
 
 .logo-image {
-  height: 100px;
+  margin-top: 0%;
+  padding-top: 0%;
+  height: 70px;
   width: 150px;
 }
 @media only screen and (max-width: 480px) {
@@ -34,10 +36,14 @@
   text-decoration: none;
   color: #000;
   align-items: center;
-  margin-left: 20px;
+  margin-right: 800px;
   cursor: pointer;
   font-size: 2rem;
   flex-grow: 1;
+
+}
+.nav-logo:hover{
+  color:ivory
 }
 
 .nav-menu {
@@ -48,7 +54,7 @@
 }
 
 .nav-links {
-  color: #fff;
+  color: rgb(24, 19, 19);
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
@@ -58,6 +64,7 @@
 .nav-item {
   line-height: 40px;
   margin-right: 1rem;
+
 }
 
 .nav-item:after {
@@ -74,6 +81,12 @@
   background: #00b5e2;
 }
 
+.nav-logo:hover {
+  /* width: 100%; */
+  /* background: #0b0c0c; */
+  text-decoration: none;
+  color: inherit;
+}
 .nav-item .active {
   color: #00b5e2;
   border: 1px solid #00b5e2;
@@ -81,6 +94,13 @@
 
 .nav-icon {
   display: none;
+}
+.nav-logo .p{
+    margin-top: 0;
+    margin-bottom: 1rem;
+    font-size: xxx-large;
+    font-family: 'Font Awesome 5 Free';
+    font-weight: bolder;
 }
 
 @media screen and (max-width: 960px) {
