--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #fff;
+  background-color: #000;
   height: 70px;
   display: flex;
   justify-content: center;
@@ -34,7 +34,7 @@
 
 .nav-logo {
   text-decoration: none;
-  color: #000;
+  color: #fff;
   align-items: center;
   margin-right: 800px;
   cursor: pointer;
@@ -54,7 +54,7 @@
 }
 
 .nav-links {
-  color: rgb(24, 19, 19);
+  color: rgb(250, 250, 250);
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
